fix: hide details triangle in Safari and adjust spacing in Firefox

--- a/app/assets/stylesheets/observations/search.scss
+++ b/app/assets/stylesheets/observations/search.scss
@@ -1189,12 +1189,28 @@ $photo-count-line-width: 1px;
         list-style: none;
         width: 25px;
         height: 25px;
-        text-shadow: 0 1px 5px rgba(0, 0, 0, .25);;
+        text-shadow: 0 1px 5px rgba(0, 0, 0, .25);
+
+        &::-webkit-details-marker {
+          display: none;
+        }
       }
       .ancestor {
         display: flex;
         gap: 5px;
         align-items: center;
+      }
+    }
+  }
+}
+@-moz-document url-prefix() {
+  #taxa-grid {
+    .corner {
+      .ancestor {
+        i.fa {
+          position: relative;
+          top: 1px;
+        }
       }
     }
   }
